--- Version 0.4.5 - DATE
- TODO: test auto-detection of pluginmap path!

- new Console RMB actions: "copy selection cleaned" and "run selection"
- added a basic help system, and some introductory help pages
- plug-in for skewness and kurtosis added
- plug-ins for distribution analysis added
- plug-ins for new plots (stripchart & density plot)
- enhancements to existing plot plug-ins
- added refresh output and flush output as toolbar actions
- removed the "output" menu; entries were moved to "Edit" and "View"
- always show all top level menus
- code generated for most plugins cleaned and simplified
- new function rk.results () for use in plugins
- fix: the output window would not refresh changed plot images (unless closed and reopened)
- fix several minor issues as identified by the "krazy" source code checker
- allow varslots to request objects of specified dimensionality and length
- fixed: integer spinboxes with starting values greater than 1 would get unreasonable change steps
- fix compilation with some versions of KDE / GCC
- small improvements to syntax highlighting definition
- in console, make cursor go to empty next line after pressing enter, before there is output (more like in the real console)
- add "run selection" option to command log
- script editor commands are piped through the console (by default; this is configurable)
- assorted cleanups

--- Version 0.4.2 - Dec-04-2006
- code generated by scatterplot plugin is simplified somewhat
- add comment headers to the sections of commands produced by plugins
- if a user command results in the output html file to be modified, auto-refresh output
- add RMB menu to script editor windows
- add options "clear" and "configure" in the console RMB menu, and the command log RMB menu
- add option to save workplace layout not per workspace, but at the end of the session
- add options ("printcmd") to settings
- fix help menu for detached windows