@@ -2,7 +2,7 @@
                           rkward.cpp  -  description
                              -------------------
     begin                : Tue Oct 29 20:06:08 CET 2002
-    copyright            : (C) 2002, 2005, 2006 by Thomas Friedrichsmeier 
+    copyright            : (C) 2002, 2005, 2006, 2007 by Thomas Friedrichsmeier 
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -569,7 +569,7 @@ void RKWardMainWindow::showHelpSearch () {
 void RKWardMainWindow::showRKWardHelp () {
 	RK_TRACE (APP);
 
-	RKWorkplace::mainWorkplace ()->openHelpWindow ("rkward://page/rkward_welcome");
+	RKWorkplace::mainWorkplace ()->openHelpWindow ("rkward://page/rkward_welcome", true);
 	topLevelWidget ()->raise ();
 }
 
